[gd_scene load_steps=10 format=3 uid="uid://0g1i3mj8c0cy"]

[ext_resource type="Script" path="res://Levels/level.gd" id="1_2d1ck"]
[ext_resource type="PackedScene" uid="uid://dr86o8ds1noms" path="res://game_master.tscn" id="1_xa8k3"]
[ext_resource type="Texture2D" uid="uid://b7xp5h6h076wp" path="res://Assets/Floor_64x64.png" id="2_3rghb"]
[ext_resource type="Texture2D" uid="uid://cwlgt68nmwqgs" path="res://Assets/Energy_64x64.png" id="3_8xk2a"]
[ext_resource type="PackedScene" uid="uid://deatib868gsy5" path="res://player.tscn" id="5_3im4n"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_hybdx"]
texture = ExtResource("2_3rghb")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_rk0rq"]
tile_size = Vector2i(64, 64)
sources/0 = SubResource("TileSetAtlasSource_hybdx")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_qfr8m"]
texture = ExtResource("3_8xk2a")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_ha4w3"]
tile_size = Vector2i(64, 64)
sources/0 = SubResource("TileSetAtlasSource_qfr8m")

[node name="Level" type="Node"]
script = ExtResource("1_2d1ck")

[node name="FloorTiles" type="TileMapLayer" parent="."]
unique_name_in_owner = true
tile_set = SubResource("TileSet_rk0rq")

[node name="Foreground" type="TileMapLayer" parent="."]
unique_name_in_owner = true
tile_set = SubResource("TileSet_ha4w3")

[node name="Camera" type="Camera2D" parent="."]
unique_name_in_owner = true

[node name="GameMaster" parent="." node_paths=PackedStringArray("level") instance=ExtResource("1_xa8k3")]
unique_name_in_owner = true
level = NodePath("..")

[node name="ClientPlayer" parent="GameMaster" instance=ExtResource("5_3im4n")]
unique_name_in_owner = true

[node name="ServerPlayer" parent="GameMaster" instance=ExtResource("5_3im4n")]
unique_name_in_owner = true

[node name="HUD" type="CanvasLayer" parent="."]
layer = 2

[node name="Player1Bank" type="Label" parent="HUD"]
unique_name_in_owner = true
offset_right = 40.0
offset_bottom = 23.0
theme_override_font_sizes/font_size = 60
text = "72"

[node name="Player2Bank" type="Label" parent="HUD"]
unique_name_in_owner = true
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 23.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 60

[node name="StartTimer" type="Label" parent="HUD"]
unique_name_in_owner = true
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 120

[node name="EndGameLabel" type="Label" parent="HUD"]
unique_name_in_owner = true
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -82.5
offset_right = 20.0
offset_bottom = 82.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 120
